// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders icon on the left by default 1`] = `
<button
  className="uk-button icon"
  type="button"
>
  <span
    className="uk-icon"
  >
    <Icon
      icon="trash"
      width={20}
    />
  </span>
   
  <span>
    test
  </span>
</button>
`;

exports[`Button renders icon on the right if specified 1`] = `
<button
  className="uk-button icon"
  type="button"
>
  <span>
    test
  </span>
  <span
    className="uk-icon"
  >
    <Icon
      icon="trash"
      width={20}
    />
  </span>
   
</button>
`;

exports[`Button should apply additional classes 1`] = `
<button
  className="uk-button uk-button-default test-class"
  type="button"
/>
`;

exports[`Button should set variation class 1`] = `
<button
  className="uk-button uk-button-primary"
  type="button"
>
  test
</button>
`;
